# Britania-Ecomm-Case

./: .gitignore  README.md  baseTestePraticoSistemasEcomm errada.csv  baseTestePraticoSistemasEcomm.csv  docker-compose.yml
api/: Dockerfile  README.md  pyproject.toml
api/app/: database.py  main.py  routes.py  schemas.py  services.py
api/tests/: test_healthcheck.py  test_pedidos.py
data_lake/: README.md
data_lake/sql/: 1_bronze.sql  2_silver.sql  3_gold.sql
dataviz/: Dockerfile  README.md  app.py  pyproject.toml
streamlit_app/: Dockerfile  README.md  app.py  pyproject.toml
streamlit_app/data_quality/: schema.py  transforms.py  validators.py
streamlit_app/services/: api_client.py
